--- a/NJS_PRS/src/components/packages/v-player/src/video.css
+++ b/NJS_PRS/src/components/packages/v-player/src/video.css
@@ -331,7 +331,7 @@
   background-color: #000;
   position: relative;
   padding: 0;
-  font-size: 10px;
+  font-size: .29rem;
   line-height: 1;
   font-weight: normal;
   font-style: normal;
@@ -383,9 +383,9 @@
 }
 
 .video-js .vjs-tech {
-  position: absolute;
-  top: 0;
-  left: 0;
+  /*position: absolute;*/
+  /*top: 0;*/
+  /*left: 0;*/
   width: 100%;
   height: 100%
 }
